--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=air-asia-project
 server.port=8181
 
-spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/air-asia
 spring.datasource.username= root
 spring.datasource.password= mysqlsac@123
 
